fixed visibility

--- a/app.css
+++ b/app.css
@@ -141,7 +141,6 @@ li {
   width: 100%;
   padding: 20px;
   position: absolute;
-  visibility: hidden;
   top: 0;
   right: 0;
   background-color: #58c8b2;
